# PDFsummarizer-ageticai-crewai

./: README.md
project_seven/: README.md  pyproject.toml  report.md
project_seven/src/project_seven/: crew.py  main.py
project_seven/src/project_seven/config/: agents.yaml  tasks.yaml
project_seven/src/project_seven/tools/: pdf_reader_tool.py
